--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
-sudo: false
 cache:
-  apt: true
   directories:
     - $HOME/.cache/pip
+    - $HOME/.cache/pre-commit
 
 python:
   - "2.7"
@@ -11,6 +10,7 @@ python:
 dist: trusty
 
 addons:
+  postgresql: "9.6"
   apt:
     packages:
       - expect-dev  # provides unbuffer utility
@@ -21,12 +21,19 @@ addons:
       - python-pandas
       - python-numpy
 
+stages:
+  - test
+
+jobs:
+  include:
+    - stage: test
+      env:
+        - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
 env:
   global:
   - VERSION="8.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
 
   matrix:
-  - LINT_CHECK="1"
   - TESTS="1" ODOO_REPO="odoo/odoo"
   - TESTS="1" ODOO_REPO="OCA/OCB"
 
