--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ addons:
   postgresql: "9.6"
   apt:
     packages:
-      - expect-dev  # provides unbuffer utility
-      - python-lxml  # because pip installation is slow
+      - expect-dev # provides unbuffer utility
+      - python-lxml # because pip installation is slow
       - python-simplejson
       - python-serial
       - python-yaml
@@ -31,17 +31,18 @@ jobs:
         - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
 env:
   global:
-  - VERSION="8.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
+    - VERSION="8.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
 
   matrix:
-  - TESTS="1" ODOO_REPO="odoo/odoo"
-  - TESTS="1" ODOO_REPO="OCA/OCB"
+    - TESTS="1" ODOO_REPO="odoo/odoo"
+    - TESTS="1" ODOO_REPO="OCA/OCB"
 
 virtualenv:
   system_site_packages: true
 
 install:
-  - git clone --depth=1 https://github.com/open-synergy/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
+  - git clone --depth=1 https://github.com/open-synergy/maintainer-quality-tools.git
+    ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
 
