--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,6 @@ addons:
   apt:
     packages:
       - expect-dev # provides unbuffer utility
-      - python-lxml # because pip installation is slow
-      - python-simplejson
-      - python-serial
-      - python-yaml
-      - python-pandas
-      - python-numpy
 
 stages:
   - test
@@ -31,17 +25,12 @@ jobs:
         - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
 env:
   global:
-    - VERSION="8.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
-
-  matrix:
-    - TESTS="1" ODOO_REPO="odoo/odoo"
-    - TESTS="1" ODOO_REPO="OCA/OCB"
-
-virtualenv:
-  system_site_packages: true
+    - VERSION="8.0" TESTS="0" LINT_CHECK="0" MAKEPOT="1"
+    - WKHTMLTOPDF_VERSION="0.12.5"
 
 install:
-  - git clone --depth=1 https://github.com/open-synergy/maintainer-quality-tools.git
+  - git clone --depth=1
+    https://github.com/simetri-sinergi-id/maintainer-quality-tools.git
     ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
