--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ cache:
 
 python:
   - "2.7"
-
 dist: trusty
 
 addons:
@@ -23,6 +22,9 @@ jobs:
     - stage: test
       env:
         - TESTS=1 ODOO_REPO="odoo/odoo" MAKEPOT="1"
+    - stage: test
+      env:
+        - TESTS=1 ODOO_REPO="OCA/OCB"
 env:
   global:
     - VERSION="8.0" TESTS="0" LINT_CHECK="0" MAKEPOT="1"
